# rknn_cnn_demo

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
model/: az_handwriting_3566.rknn
src/: main.cc
